<resources>
    <string name="app_name">Weather</string>
    <string name="title_locations">Locations</string>
    <string name="title_observation_stations">Observation Stations</string>
    <string name="title_warnings">Weather Warnings</string>
    <string name="list_card_title_dummy">Item Name</string>
    <string name="empty_text_warnings">No weather warnings</string>
    <string name="empty_text_observation_stations">Could not find any observation stations!</string>
    <string name="empty_text_locations">No saved locations</string>
    <string name="title_add_location">Add Location</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="location_name_hint">Location Name</string>
    <string name="location_latitude_hint">Latitude</string>
    <string name="location_longitude_hint">Longitude</string>
    <string name="location_altitude_hint">Altitude (Optional)</string>
    <string name="location_add_button_text">Add</string>
    <string name="location_edit_button_text">Save Changes</string>
    <string name="location_cancel_button_text">Cancel</string>
    <string name="location_delete_button_text">Delete</string>
    <string name="title_location_delete_confirmation">Are you sure?</string>
    <string name="no_network">No network connection!</string>
    <string name="station_weather_description">Weather Description: %1$s</string>
    <string name="station_temperature">Temperature: %1$s °C</string>
    <string name="station_humidity">Humidity: %1$s%%</string>
    <string name="station_pressure">Pressure: %1$s kPa</string>
    <string name="station_rain_1h">Rain: %1$s mm/hour</string>
    <string name="station_wind">Wind: %1$s km/h (%2$s)</string>
    <string name="station_wind_gust">Wind Gust: %1$s km/hr</string>
    <string name="station_geohash">Geohash: %1$s</string>
    <string name="station_latitude">Latitude: %1$s</string>
    <string name="station_longitude">Longitude: %1$s</string>
    <string name="station_last_updated">Last Updated: %1$s</string>
    <string name="warning_level">%1$s Warning</string>
    <string name="warning_issued">Issued: %1$s</string>
    <string name="warning_updated">Updated: %1$s</string>
    <string name="warning_onset">Active From: %1$s</string>
    <string name="warning_expiry">Active Until: %1$s</string>
    <string name="warning_type">Warning Type: %1$s</string>
    <string name="warning_regions">Regions: %1$s</string>
    <string name="forecast_loading">Loading forecast…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="edit">Edit Location</string>
    <string name="delete">Delete Location</string>
    <string name="title_settings">Settings</string>
    <string name="settings_btn_delete_files">Delete All Location Data</string>
    <string name="settings_btn_load_example_data">Load Example Location Data</string>
    <string name="error_invalid_location">This location is invalid, please try again.</string>
    <string name="error_invalid_name">Please enter a longer name!</string>
    <string name="error_invalid_latitude">Latitude must be between -90 and 90!</string>
    <string name="error_invalid_longitude">Longitude must be between -180 and 80!</string>
    <string name="error_invalid_altitude">Altitude must be between 0 and 9000!</string>
    <string name="error_empty">Please enter a value!</string>
    <string name="warning_icon_description">Warning Icon</string>
    <string name="list_icon_description">List Icon</string>
    <string name="forecast_details_temperature">Temperature: %1$s</string>
    <string name="forecast_details_pressure">Pressure: %1$s</string>
    <string name="forecast_details_humidity">Humidity: %1$s</string>
    <string name="forecast_details_wind_dir">Wind Direction: %1$s</string>
    <string name="forecast_details_wind_speed">Wind Speed: %1$s</string>
    <string name="forecast_details_cloud">Cloud Cover: %1$s</string>
    <string name="title_forecast">Forecast: %1$s</string>
    <string name="title_location_picker">Choose a location</string>
    <string name="location_map_button_text">Pick Location From Map</string>
    <string name="location_permission_denied">Location Permission Denied!</string>
    <string name="location_picker_crosshair">Location Picker Crosshair</string>
    <string name="get_device_location">Get device location</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="location_picker_btn_select">Select location</string>
    <string name="empty_text_forecast">No forecast data found!</string>
    <string name="updated">Updated %1$s</string>
    <string name="deleted">Deleted %1$s</string>
    <string name="location_added">Added Location: %1$s</string>
    <string name="refreshing_forecast">Refreshing forecast data</string>
    <string name="refreshing_stations">Refreshing observation stations</string>
    <string name="refreshing_warnings">Refreshing weather warnings</string>
    <string name="settings_switch_warnings_test">UIse Weather Warning Test API</string>
    <string name="loaded_sample_data">Loaded sample data</string>
    <string name="station_btn_get_forecast">Get forecast for this station</string>
    <string name="station_btn_add_as_loc">Add this station as a saved location</string>
</resources>