<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context=".activities.ForecastDetailsActivity">

    <ImageView
        android:id="@+id/forecast_details_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_cloud"
        app:tint="@color/material_on_background_emphasis_high_type"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/forecast_details_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/warning_level"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_temperature"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_humidity"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_pressure"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_wind_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_wind_dir"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_wind_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_wind_speed"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/forecast_details_cloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_details_cloud"
        android:textAppearance="?android:textAppearanceMedium" />

</LinearLayout>