<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.WarningActivity">

    <ImageView
        android:id="@+id/warning_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_warning"/>

    <TextView
        android:id="@+id/warning_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/warning_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:maxLines="12"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/warning_regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:maxLines="8"
        android:text="@string/warning_regions" />

    <TextView
        android:id="@+id/warning_issued"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_issued" />

    <TextView
        android:id="@+id/warning_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_updated" />

    <TextView
        android:id="@+id/warning_onset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_onset" />

    <TextView
        android:id="@+id/warning_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_expiry" />

</LinearLayout>