<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/nav_locations">

    <fragment
        android:id="@+id/nav_locations"
        android:name="ie.dylangore.mad1.assignment2.fragments.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />
    <fragment
        android:id="@+id/nav_observation_stations"
        android:name="ie.dylangore.mad1.assignment2.fragments.ObservationStationsFragment"
        android:label="@string/title_observation_stations"
        tools:layout="@layout/fragment_observation_stations" />
    <fragment
        android:id="@+id/nav_warnings"
        android:name="ie.dylangore.mad1.assignment2.fragments.WarningsFragment"
        android:label="@string/title_warnings" />
</navigation>