<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.ForecastActivity">

    <TextView
        android:id="@+id/forecast_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:lines="30"
        android:paddingTop="@dimen/keyline_2"
        android:text="@string/forecast_loading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Explicitly defined as MaterialButton rather than Button to avoid compiler warning -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forecast_edit_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_4"
            android:layout_marginEnd="@dimen/keyline_4"
            android:layout_weight="1"
            android:text="@string/edit"
            app:icon="@drawable/ic_edit" />

        <!-- Explicitly defined as MaterialButton rather than Button to avoid compiler warning -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forecast_delete_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_4"
            android:layout_marginEnd="@dimen/keyline_4"
            android:layout_weight="1"
            android:text="@string/delete"
            app:icon="@drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>